# NutriGen-AI-Nutrition-Agent

./: .gitignore  README.md  config.py  config.yaml  envirnment.md  main.py  person_intake.txt  pyproject.toml  requirements.txt  requirements_dev.txt  temp_env.txt
app/: config.py  deps.py
app/routers/: chat.py
backend/: README.md  config.yaml  diagram.md
backend/agents/: base_agent.py  nutrition_agent.py
backend/app/: main.py
backend/app/routers/: history.py  ingest.py
backend/mcp_tools/: calculator_tool.py  nutrition_api_tool.py  tool_registry.py
backend/rag/: ingestion.py  memory.py  pipeline.py
backend/ui/: chainlit_app.py
docs/: uses_tools_docs.ipynb
experiment/: base-version.ipynb  instuctions.ipynb  prompt.txt  prompt1.txt  version-0.2.ipynb  version-3.0.ipynb  version-3.0.md  workflow-paths.ipynb
mcp_tools/: base_tool.py  search_tool.py
rag/: chunking.py  embeddings.py  vectorstore.py
